--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 numpy==1.24.2
 oauthlib==3.2.2
-opencv-python-headless==4.7.0.68
+opencv-python==4.7.0.68
 opt-einsum==3.3.0
 packaging==23.0
 pandas==1.5.3
